chore: feature flags file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -4,5 +4,7 @@
 # All .md files
 *.md @kyma-project/technical-writers
 
+/config/featureToggles/featureToggles.yaml @kyma-project/phoenix-admins
+
 # Default owners of the `cloud-manager` repository
 * @kyma-project/Phoenix
