--- a/config/featureToggles/featureToggles.yaml
+++ b/config/featureToggles/featureToggles.yaml
@@ -1,4 +1,3 @@
-
 apiDisabled:
   variations:
     enabled: false
@@ -7,21 +6,20 @@ apiDisabled:
     - name: All APIs are disabled for trial SKR
       query: brokerPlan == "trial"
       variation: disabled
+    - name: Enabled on stage for global account 6034adc9-3441-494c-b438-a0eba4c5045a
+      query: landscape == "stage" and globalAccount == "6034adc9-3441-494c-b438-a0eba4c5045a"
+      variation: enabled
     - name: Disabled APIs on stage and prod
-      query: feature in ["nfsBackup", "peering"] and landscape != "dev"
+      query: feature in ["nfsBackup", "peering", "redis"] and landscape != "dev"
       variation: disabled
   defaultRule:
     variation: enabled
 ipRangeAutomaticCidrAllocation:
   variations:
-    enabled: false
-    disabled: true
-  targeting:
-    - name: Enabled on dev 059dbc39-fd2b-4186-b0e5-8a1bc8ede5b8
-      query: landscape == "dev" and kyma == "059dbc39-fd2b-4186-b0e5-8a1bc8ede5b8"
-      variation: enabled
+    enabled: true
+    disabled: false
   defaultRule:
-    variation: disabled
+    variation: enabled
 gcpNfsVolumeAutomaticLocationAllocation:
   variations:
     enabled: true
