--- a/.github/workflows/cloud-manager-build.yml
+++ b/.github/workflows/cloud-manager-build.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Get the latest tag
         id: get_tag
-        run: echo ::set-output name=TAG::"v{{ .Date }}-{{ .ShortSHA }}"
+        run: echo "TAG"="v{{ .Date }}-{{ .ShortSHA }}" >> $GITHUB_OUTPUT
       - name: Echo the tag
         run: echo ${{ steps.get_tag.outputs.TAG }}
   build-image:
