--- a/.github/workflows/pr-feature-toggles.yaml
+++ b/.github/workflows/pr-feature-toggles.yaml
@@ -16,9 +16,14 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: '1.21'
+      - name: Go details
+        run: |
+          go env
       - name: Install jv
         run: |
+          ls -ls $GOBIN
           go install github.com/santhosh-tekuri/jsonschema/cmd/jv@latest
+          ls -ls $GOBIN
       - name: Validate schema
         run: |
           $GOBIN/jv --assert-content --assert-format https://raw.githubusercontent.com/thomaspoignant/go-feature-flag/v1.31.2/.schema/flag-schema.json ./config/featureToggles/featureToggles.yaml
