--- a/.github/workflows/pr-feature-toggles.yaml
+++ b/.github/workflows/pr-feature-toggles.yaml
@@ -21,11 +21,9 @@ jobs:
           go env
       - name: Install jv
         run: |
-          echo $PATH
-          ls -la $GOPATH/bin
           go install github.com/santhosh-tekuri/jsonschema/cmd/jv@latest
-          ls -la $GOPATH/bin
       - name: Validate schema
         run: |
-          jv --assert-content --assert-format https://raw.githubusercontent.com/thomaspoignant/go-feature-flag/v1.31.2/.schema/flag-schema.json ./config/featureToggles/featureToggles.yaml
+          SCHEMA_URL="https://raw.githubusercontent.com/thomaspoignant/go-feature-flag/v1.31.2/.schema/flag-schema.json"
+          jv --assert-content --assert-format $SCHEMA_URL ./config/featureToggles/featureToggles.yaml
 
