--- a/.github/workflows/cloud-manager-build.yml
+++ b/.github/workflows/cloud-manager-build.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Get the latest tag
         id: get_tag
-        run: echo "TAG"="v{{ .Date }}-{{ .ShortSHA }}" >> $GITHUB_OUTPUT
+        run: echo "TAG"="v$(date +'%Y%m%d')-$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
       - name: Echo the tag
         run: echo ${{ steps.get_tag.outputs.TAG }}
   build-image:
