--- a/.github/workflows/cloud-manager-build.yml
+++ b/.github/workflows/cloud-manager-build.yml
@@ -4,13 +4,8 @@ on:
   push:
     branches:
       - main
-
-# if we decide to build images for PRs in the future, we can add this event
-#  pull_request_target:
-#    types: [opened, edited, synchronize, reopened, ready_for_review]
-#    paths:
-#      - ".github/workflows/cloud-manager-build.yml"
-#      - "/**"
+  pull_request_target:
+    types: [opened, edited, synchronize, reopened, ready_for_review]
 
 permissions:
   id-token: write # This is required for requesting the JWT token
