refactor(GcpRedisInstance): adjust transitEncryption to transitEncryptionMode

--- a/config/samples/cloud-resources_v1beta1_gcpredisinstance.yaml
+++ b/config/samples/cloud-resources_v1beta1_gcpredisinstance.yaml
@@ -16,8 +16,7 @@ spec:
   # optional fields
   redisVersion: REDIS_7_0
   authEnabled: true
-  transitEncryption:
-    serverAuthentication: true
+  transitEncryptionMode: SERVER_AUTHENTICATION
   redisConfigs:
     maxmemory-policy: volatile-lru
     activedefrag: "yes"
