--- a/config/featureToggles/featureToggles.yaml
+++ b/config/featureToggles/featureToggles.yaml
@@ -6,6 +6,9 @@ apiDisabled:
     - name: All APIs are disabled for trial SKR
       query: brokerPlan == "trial"
       variation: disabled
+    - name: Enabled gcp and aws redis on stage for global account 6034adc9-3441-494c-b438-a0eba4c5045a
+      query: feature == "redis" and provider in ["gcp", "aws"] and landscape == "stage" and globalAccount == "6034adc9-3441-494c-b438-a0eba4c5045a"
+      variation: enabled
     - name: Enabled on stage for global account 6034adc9-3441-494c-b438-a0eba4c5045a
       query: landscape == "stage" and globalAccount == "6034adc9-3441-494c-b438-a0eba4c5045a"
       variation: enabled
