--- a/.github/workflows/cloud-manager-build.yml
+++ b/.github/workflows/cloud-manager-build.yml
@@ -18,7 +18,7 @@ jobs:
     if: github.ref_type == 'tag'
     uses: kyma-project/test-infra/.github/workflows/image-builder.yml@main # Usage: kyma-project/test-infra/.github/workflows/image-builder.yml@main
     with:
-      tags: ${{ github.ref }}
+      tags: ${{ github.ref_name }}
       name: cloud-manager
       dockerfile: Dockerfile
       export-tags: true
