--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_awsredisinstances.yaml
 - bases/cloud-resources.kyma-project.io_cceenfsvolumes.yaml
 - bases/cloud-control.kyma-project.io_networks.yaml
+- bases/cloud-resources.kyma-project.io_awsnfsbackupschedules.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -44,6 +45,7 @@ patches:
 #- path: patches/webhook_in_cloud-resources_gcpredisinstances.yaml
 #- path: patches/webhook_in_cloud-resources_awsredisinstances.yaml
 #- path: patches/webhook_in_cloud-resources_gcpnfsbackupschedules.yaml
+#- path: patches/webhook_in_cloud-resources_awsnfsbackupschedules.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
@@ -68,6 +70,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_gcpnfsbackupschedules.yaml
 #- path: patches/cainjection_in_cloud-resources_cceenfsvolumes.yaml
 #- path: patches/cainjection_in_cloud-control_networks.yaml
+#- path: patches/cainjection_in_cloud-resources_awsnfsbackupschedules.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
