--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -19,4 +19,5 @@ resources:
 - cloud-resources_v1beta1_awsredisinstance.yaml
 - cloud-resources_v1beta1_cceenfsvolume.yaml
 - cloud-control_v1beta1_network.yaml
+- cloud-resources_v1beta1_awsnfsbackupschedule.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
