--- a/.github/workflows/pr-lint-permissions.yml
+++ b/.github/workflows/pr-lint-permissions.yml
@@ -1,10 +1,10 @@
-name: Node.js CI
+name: Contributor Docs Permission Lint
 
 on:
   pull_request:
 
 jobs:
-  build:
+  permission_lint:
     runs-on: ubuntu-latest
 
     strategy:
@@ -22,5 +22,5 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Run script
+      - name: Run permission lint script
         run: node ci/docs-permission-sorter.js ${{ matrix.combination.docsPath }} ${{ matrix.combination.permissionPath }}
