--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -21,4 +21,5 @@ resources:
 - cloud-control_v1beta1_network.yaml
 - cloud-resources_v1beta1_awsnfsbackupschedule.yaml
 - cloud-control_v1beta1_nuke.yaml
+- cloud-resources_v1beta1_awsnfsvolumerestore.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
