chore: refactor azure permissions and add to permission lint

--- a/.github/workflows/pr-lint-permissions.yml
+++ b/.github/workflows/pr-lint-permissions.yml
@@ -14,6 +14,8 @@ jobs:
             permissionPath: Statement.0.Action
           - docsPath: docs/contributor/gcp-permissions.md
             permissionPath: ""
+          - docsPath: docs/contributor/azure-permissions.md
+            permissionPath: Actions
 
     steps:
       - name: Checkout code
