--- a/.github/workflows/pr-lint-permissions.yml
+++ b/.github/workflows/pr-lint-permissions.yml
@@ -2,6 +2,9 @@ name: PR Contributor Docs Permission Lint
 
 on:
   pull_request:
+    paths:
+      - "ci/**"
+      - "docs/**"
 
 jobs:
   permission_lint:
