feat: Add proper categories for CRDs

--- a/config/crd/bases/cloud-resources.kyma-project.io_awsvpcpeerings.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_awsvpcpeerings.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   group: cloud-resources.kyma-project.io
   names:
+    categories:
+    - kyma-cloud-manager
     kind: AwsVpcPeering
     listKind: AwsVpcPeeringList
     plural: awsvpcpeerings
