--- a/config/crd/bases/cloud-resources.kyma-project.io_cceenfsvolumes.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_cceenfsvolumes.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   group: cloud-resources.kyma-project.io
   names:
+    categories:
+    - kyma-cloud-manager
     kind: CceeNfsVolume
     listKind: CceeNfsVolumeList
     plural: cceenfsvolumes
