--- a/config/crd/bases/cloud-resources.kyma-project.io_awsredisinstances.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_awsredisinstances.yaml
@@ -9,6 +9,8 @@ metadata:
 spec:
   group: cloud-resources.kyma-project.io
   names:
+    categories:
+      - kyma-cloud-manager
     kind: AwsRedisInstance
     listKind: AwsRedisInstanceList
     plural: awsredisinstances
