--- a/config/crd/bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_azurevpcpeerings.yaml
@@ -9,6 +9,8 @@ metadata:
 spec:
   group: cloud-resources.kyma-project.io
   names:
+    categories:
+      - kyma-cloud-manager
     kind: AzureVpcPeering
     listKind: AzureVpcPeeringList
     plural: azurevpcpeerings
