--- a/config/crd/bases/cloud-resources.kyma-project.io_gcpredisinstances.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_gcpredisinstances.yaml
@@ -9,6 +9,8 @@ metadata:
 spec:
   group: cloud-resources.kyma-project.io
   names:
+    categories:
+      - kyma-cloud-manager
     kind: GcpRedisInstance
     listKind: GcpRedisInstanceList
     plural: gcpredisinstances
