--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -22,6 +22,7 @@ resources:
 - bases/cloud-resources.kyma-project.io_cceenfsvolumes.yaml
 - bases/cloud-control.kyma-project.io_networks.yaml
 - bases/cloud-resources.kyma-project.io_awsnfsbackupschedules.yaml
+- bases/cloud-control.kyma-project.io_nukes.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patches:
@@ -71,6 +72,7 @@ patches:
 #- path: patches/cainjection_in_cloud-resources_cceenfsvolumes.yaml
 #- path: patches/cainjection_in_cloud-control_networks.yaml
 #- path: patches/cainjection_in_cloud-resources_awsnfsbackupschedules.yaml
+#- path: patches/cainjection_in_cloud-control_nukes.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # [WEBHOOK] To enable webhook, uncomment the following section
