--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -93,6 +93,32 @@ rules:
 - apiGroups:
   - cloud-control.kyma-project.io
   resources:
+  - nukes
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cloud-control.kyma-project.io
+  resources:
+  - nukes/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - cloud-control.kyma-project.io
+  resources:
+  - nukes/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - cloud-control.kyma-project.io
+  resources:
   - redisinstances
   verbs:
   - create
