chore: refactor azure permissions and add to permission lint (#681)

--- a/.github/workflows/pr-lint-permissions.yml
+++ b/.github/workflows/pr-lint-permissions.yml
@@ -2,6 +2,9 @@ name: PR Contributor Docs Permission Lint
 
 on:
   pull_request:
+    paths:
+      - "ci/**"
+      - "docs/**"
 
 jobs:
   permission_lint:
@@ -14,6 +17,8 @@ jobs:
             permissionPath: Statement.0.Action
           - docsPath: docs/contributor/gcp-permissions.md
             permissionPath: ""
+          - docsPath: docs/contributor/azure-permissions.md
+            permissionPath: Actions
 
     steps:
       - name: Checkout code
