--- a/.github/workflows/pr-check-block-via-labels.yaml
+++ b/.github/workflows/pr-check-block-via-labels.yaml
@@ -1,7 +1,7 @@
 name: Block mergings PRs if it contains a blocking label (do-not-merge, hold)
 
 on:
-  pull_request_target:
+  pull_request:
     types:
       - labeled
       - unlabeled
