--- a/.github/workflows/pr-check-block-via-labels.yaml
+++ b/.github/workflows/pr-check-block-via-labels.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const { pullRequest } = await github.rest.pulls.get({
+            const { data: pullRequest } = await github.rest.pulls.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
               pull_number: context.payload.pull_request.number
