--- a/config/samples/cloud-resources_v1beta1_awsredisinstance.yaml
+++ b/config/samples/cloud-resources_v1beta1_awsredisinstance.yaml
@@ -15,6 +15,8 @@ spec:
   # optional fields
   engineVersion: "7.0"
   autoMinorVersionUpgrade: true
-  transitEncryptionEnabled: true
+  parameters:
+    maxmemory-policy: volatile-lru
+    activedefrag: "yes"
   preferredMaintenanceWindow: sun:23:00-mon:01:30
 
