feat(AwsRedisInstance): add support for HA via read replicas

--- a/config/samples/cloud-resources_v1beta1_awsredisinstance.yaml
+++ b/config/samples/cloud-resources_v1beta1_awsredisinstance.yaml
@@ -14,6 +14,7 @@ spec:
 
   # optional fields
   engineVersion: "7.0"
+  readReplicas: 1
   autoMinorVersionUpgrade: true
   parameters:
     maxmemory-policy: volatile-lru
