feat(GcpRedisInstance): replace tier and memorySizeGb with redisTier

--- a/config/samples/cloud-resources_v1beta1_gcpredisinstance.yaml
+++ b/config/samples/cloud-resources_v1beta1_gcpredisinstance.yaml
@@ -10,8 +10,8 @@ metadata:
   name: gcpredisinstance-sample
 spec:
   # required fields
-  memorySizeGb: 1
-  tier: "BASIC"
+  redisTier: "P1"
+  replicaCount: 2
 
   # optional fields
   redisVersion: REDIS_7_0
