chore: updates golang lint skip-cache: true

--- a/.github/workflows/pr-golang-lint.yml
+++ b/.github/workflows/pr-golang-lint.yml
@@ -22,5 +22,4 @@ jobs:
           version: v1.59
           args: --timeout=30m
           only-new-issues: true
-          skip-pkg-cache: true
-          skip-build-cache: true
+          skip-cache: true
