chore: add latest tag

--- a/.github/workflows/cloud-manager-build.yml
+++ b/.github/workflows/cloud-manager-build.yml
@@ -26,9 +26,7 @@ jobs:
     if: github.ref_type != 'tag'
     uses: kyma-project/test-infra/.github/workflows/image-builder.yml@main # Usage: kyma-project/test-infra/.github/workflows/image-builder.yml@main
     with:
-      tags: |
-        ${{ github.ref_name }}
-        latest
+      tags: latest
       name: cloud-manager
       dockerfile: Dockerfile
-      export-tags: true
+      export-tags: false
