Added feature flag

--- a/config/featureToggles/featureToggles.yaml
+++ b/config/featureToggles/featureToggles.yaml
@@ -38,3 +38,10 @@ nukeBackupsGcp:
     no: false
   defaultRule:
     variation: no
+
+nukeBackupsAws:
+  variations:
+    yes: true
+    no: false
+  defaultRule:
+    variation: no
