chore: run merge-gate on pr label change

--- a/.github/workflows/merge-gate.yaml
+++ b/.github/workflows/merge-gate.yaml
@@ -1,6 +1,7 @@
 name: Merge Gate
 on:
   pull_request:
+    types: [opened, edited, synchronize, reopened, ready_for_review, converted_to_draft, ready_for_review, labeled, unlabeled]
 
 permissions:
   checks: read
