--- a/.github/workflows/create-release-notes.yaml
+++ b/.github/workflows/create-release-notes.yaml
@@ -8,7 +8,6 @@ on:
 jobs:
   generate-release-notes:
     runs-on: ubuntu-latest
-    environment: release-notes-env
 
     steps:
       - name: Checkout repository
@@ -22,6 +21,6 @@ jobs:
 
       - name: Generate release notes
         env:
-          GREN_GITHUB_TOKEN: ${{ secrets.GREN_GITHUB_TOKEN }}
+          GREN_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gren release --data-source=milestones --milestone-match="Release {{tag_name}}" --changelog-filename="CHANGELOG.md" --override
