--- a/.github/workflows/pr-golang-lint.yml
+++ b/.github/workflows/pr-golang-lint.yml
@@ -17,7 +17,6 @@ jobs:
         with:
           go-version: '1.22.7'
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6.0.1
+        uses: golangci/golangci-lint-action@v6.1.1
         with:
-          version: v1.59
-          args: --timeout=10m
+          version: latest
