test(GcpRedisInstance): add API tests for redisVersion downgrade

--- a/config/crd/bases/cloud-resources.kyma-project.io_gcpredisinstances.yaml
+++ b/config/crd/bases/cloud-resources.kyma-project.io_gcpredisinstances.yaml
@@ -153,6 +153,13 @@ spec:
                     - REDIS_7_0
                     - REDIS_6_X
                   type: string
+                  x-kubernetes-validations:
+                    - message: redisVersion cannot be downgraded.
+                      rule: (self != "REDIS_7_0" || oldSelf == "REDIS_7_0" || oldSelf == "REDIS_6_X")
+                    - message: redisVersion cannot be downgraded.
+                      rule: (self != "REDIS_7_2" || oldSelf == "REDIS_7_2" || oldSelf == "REDIS_7_0" || oldSelf == "REDIS_6_X")
+                    - message: redisVersion cannot be downgraded.
+                      rule: (self != "REDIS_6_X" || oldSelf == "REDIS_6_X")
               required:
                 - redisTier
               type: object
