fix the milestoneMatch patern, remove uneeded params from command line

--- a/.github/workflows/.grenrc.json
+++ b/.github/workflows/.grenrc.json
@@ -5,6 +5,6 @@
     ":fire: Enhancements:": ["kind/feature"],
     ":bug: Bug fixes:": ["kind/bug"]
   },
-  "milestoneMatch": "v{{tag_name}}",
+  "milestoneMatch": "{{tag_name}}",
   "changelogFilename": "CHANGELOG.md"
 }
