--- a/.github/workflows/create-release-notes.yaml
+++ b/.github/workflows/create-release-notes.yaml
@@ -23,4 +23,4 @@ jobs:
         env:
           GREN_GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gren release --data-source=milestones --milestone-match="Release {{tag_name}}" --changelog-filename="CHANGELOG.md" --override
+          gren release --data-source=milestones --override
